      is that it failed to compile straight away with the version in unstable
      (boost-1.55) in some sections of the code (e.g. problemresolver, sqlite,
      file_cache), and because since it is now part of the standard, there is
      little reason to use Boost for that.  The rest of cases not covered in
      this version shall be converted later on.

    * Several other miscellaneous changes to allow to compile with C++11.

- Documentation:

- Translation updates:

[06/02/2014]
Version 0.6.11

- Bug fixes:

  * Load package tags from APT if debtags database is not available.
    (Closes: #501732)

  * [cmdline]: Use arch-qualified names for virtual packages.

  * Empty environment variables are treated as though they are not
    set.

  * Remove -Werror from default compiler flags. (Closes: #746824)

- Internal changes:

  * Access apt-xapian-index directly.  Index path can be configured by
    setting Apt-Xapian-Index::Index in apt.conf(5).

  * Standardize on a single package tags interface.

  * No longer use libept. (Closes: #504153, #677551)

- Translation updates:

  * Italian docs.  Thanks to Beatrice Torracca. (Closes: #741875)

  * Portuguese (Closes: #748141)

[02/10/2014]
Version 0.6.10

Note that 0.6.9 was an experimental release.  Most of the changes it
contained are temporarily reverted, but they will return.

- New features:

  * New sort policy 'installsizechange', for sorting by change in installed size
    of each package when the desired actions are applied (Closes: #676075)

- Bug fixes:

  * Fix segfault and show the correct changelog when executing "aptitude
    changelog <source-package-name>", and no binary packages in that source
    package match the source package name (Closes: #723821)

  * Use new URL to grab changelogs, redirections were set up so it is not
    currently a problem, but the new location seems to be the canonical place
    for metadata (Closes: #708345)
